Added level1 and level2

--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
       <span>Z</span>
       <span>A</span>
     </div>
-    <div class="word-one" onclick="window.location.href='quiz.html'">
+    <div class="word-one" onclick="window.location.href='level1.html'">
       <span>S</span>
       <span>E</span>
       <span>C</span>
       <span>R</span>
-      <span class="clue">E</span>
+      <span>E</span>
       <span>T</span>
       <span>O</span>
       <span>S</span>
     </div>
 
     <img
-      style="margin-top: 2.5em; margin-bottom: 2.5em;"
+      style="margin-top: 2.5em; margin-bottom: 2.5em"
       src="images/inspector_walking.gif"
       onclick="alert('Aveces los secretos te llevan al éxito!')"
       alt="Inspector"
@@ -94,7 +94,7 @@
       class="button"
       onclick="alert('No es tan fácil! 😁')"
       value="ENTRAR"
-      style="font-family: 'Anton', sans-serif;"
+      style="font-family: 'Anton', sans-serif"
     >
       <span>ENTRAR</span>
     </button>
